# powdermonkey

./: .codespellrc  .dockerignore  .env.example  .gitignore  .housekeeping.toml  .straitjacket.yaml  .vale.ini  CHANGELOG.md  CLAUDE.md  README.md  biome.json  design.md  docker-compose.yml  drizzle.config.ts  go_dev.sh  lostpixel.config.ts  package.json  tsconfig.json
.githooks/: README.md  pre-commit  pre-push
.github/: dependabot.yml
.storybook/: main.ts  preview.tsx
bd-crash-test/: README.md  index.ts  load-cjs.cjs  load-esm.mjs  package.json
docker/: Dockerfile  tailscale-serve.json
docs/: agents-and-models.md  all-prs-spike.md  backups.md  claude-usage-spike.md  completion-model.md  desktop.md  docker.md  exe-dev-migration.md  generated-files.md  git-notes-spike.md  issues-triage-spike.md  layers.md  linting-spike.md  map-reduce.md  pr-review-spike.md  pr-review.md  ssh-frontend.md  supervisor-copilot.md  tmux.md  typed-strings.md  vocabulary.md  windows.md
drizzle/: 0000_right_the_stranger.sql  0000_wakeful_gamora.sql  0001_striped_deathbird.sql  0002_typical_logan.sql  0003_tired_tomorrow_man.sql  0004_mixed_starbolt.sql  0005_thick_nocturne.sql  0006_parched_hiroim.sql  0006_parched_sasquatch.sql  0007_slow_blonde_phantom.sql  0008_parallel_butterfly.sql  0009_polite_hardball.sql  0010_ordinary_vargas.sql  0011_mushy_aqueduct.sql  0011_silly_vance_astro.sql  0012_outstanding_sir_ram.sql  (+19 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
(+503 files in other folders)
